prepare for push to origin

--- a/client/index.jade
+++ b/client/index.jade
@@ -33,7 +33,9 @@ html(ng-app='yum.my', lang='en')
     script(src='/views/login/login.js')
     script(src='/views/logout/logout.js')
     script(src='/views/bookmarks/bookmarks.js')
+    script(src='/views/categories/categories.js')
     script(src='/components/factories/home.js')
     script(src='/components/factories/user.js')
+    script(src='/components/factories/category.js')
     script(src='/components/factories/http-interceptor.js')
 
