--- a/client/nav.jade
+++ b/client/nav.jade
@@ -16,5 +16,6 @@
       ul.nav.navbar-nav.navbar-right(ng-show='email')
         li: a(href='/#/') Home
         li: a(href='/#/bookmarks') Bookmarks
+        li: a(href='/#/categories') Categories
         li: a(href='/#/logout') {{email}}
 
