--- a/client/views/bookmarks/bookmarks.jade
+++ b/client/views/bookmarks/bookmarks.jade
@@ -2,9 +2,9 @@ h3 Bookmarks
 
 .row
   .col-xs-3
-    form(role-'form', novalidate, name-'categoryForm')
+    form(role='form', novalidate, name='categoryForm')
       .form-group
-        labe(for='name') Name
+        label(for='name') Name
         input.form-control#name(type='text', name='name', ng-model='name', autofocus, required)
         button.btn.btn-primary(ngshow='categoryForm.$valid', ng-click='addCategory()') Add Category
   .col-xs-9
